# graphRAG

./: .coverage  .dockerignore  .env.docker  .env.example  .env.sample  .gitignore  .roomodes  CHANGES.md  Dockerfile  README.md  USAGE_GUIDE.md  add_bug.py  add_bug2.py  add_bug3.py  bug_audit_report.md  check_relationship_types.py  deprecated-files-analysis.md  docker-compose.yml  docker-entrypoint.sh  graph_data.json  hybrid_search.py  import_documents.py  install-dependencies.sh  processing_log.txt  project-dictionary.md  project_dictionary.md  pyproject.toml  pytest.ini  query_concepts.py  query_database.py  requirements-test.txt  requirements-update.txt  requirements.txt  run-git.sh  start-graphrag-local.sh  test_api_add_document.py  test_concept_extraction_chunking.py  test_document_chunking.py  test_document_pipeline.py  test_mpc_concept.py  (+7 more)
.roo/: code_mode_rules.md  debug_mode_rules.md  mcp.json  python_guidelines.md
bugMCP/: README.md  bugAPI.py  bugAPI_client.py  bugMCP.py  bugMCP_client.py  bugMCP_mcp.py  bug_fixed.json  bugs.json  generate_settings.py  mcp_settings.template.json  pending_bugs.json  pytest.ini  standalone_server.py  test_bugAPI.py  test_bugMCP_mcp.py
config/: README.md  env.docker  env.sample  llm_config.json  llm_config.json.sample  lmstudio_config.json.sample  openrouter_config.json  openrouter_config.json.sample
docs/: README.md  development_tools.md  local_deployment.md  mcp_server_setup.md  mcp_settings_example.json  mpc_server_setup.md  port_configuration_implementation.md  port_configuration_summary.md  updating_port_references.md
example_docs/: computer_vision.txt  generative_ai.json  machine_learning_basics.txt  natural_language_processing.txt  reinforcement_learning.json
examples/: graphrag_mpc_client.py  langchain_agent_example.py  mcp_client_example.py  mpc_client_example.py  openai_function_example.py  port_configuration_example.py  simple_demo.py
neo4j/: README.txt  packaging_info
project/: roadmap.md
scripts/: add_document.py  add_document_with_concepts.py  batch_process.py  check_db_indexes.py  check_neo4j_connection.py  check_ports.sh  check_python_version.sh  clean_database.py  cleanup_duplicates.py  clear_neo4j.py  docker_build_debug.sh  docker_build_run.sh  docker_stop.sh  download_nltk_data.py  extract_concepts_from_documents.py  extract_concepts_with_llm.py  extract_concepts_with_openrouter.sh  initialize_database.py  install-dependencies.sh  install_neo4j.sh  langchain_agent_example.py  mcp_client_example.py  mpc_client_example.py  openai_function_example.py  optimize_existing_data.py  optimized_add_document.py  process_ebooks.py  query_ebooks.py  query_graphrag.py  repair_vector_index.py  reset_chromadb.py  reset_database.py  reset_neo4j_password.sh  simple_demo.py  (+19 more)
(+300 files in other folders)
